Add diffusion-based inpainting on CV2

--- a/PlusNN.ipynb
+++ b/PlusNN.ipynb
@@ -38,7 +38,9 @@
     "from torchvision.transforms import v2\n",
     "\n",
     "from curvelops import FDCT2D\n",
-    "from curvelops.plot import create_colorbar"
+    "from curvelops.plot import create_colorbar\n",
+    "\n",
+    "import cv2"
    ]
   },
   {
@@ -337,7 +339,24 @@
     "    grid_z0 = torch.from_numpy(grid_z0)\n",
     "    grid_z0 = torch.unsqueeze(grid_z0,0)\n",
     "    grid_z0 = torch.unsqueeze(grid_z0,0)\n",
-    "    return grid_z0"
+    "    return grid_z0\n",
+    "\n",
+    "\n",
+    "def cv2_inpainting(A,mask,method=cv2.INPAINT_TELEA):\n",
+    "    # convert to rgb\n",
+    "    A = cv2.cvtColor((A*mask)*255,cv2.COLOR_GRAY2BGR).astype('uint8')\n",
+    "    mask2 = ((1-mask)*255).astype('uint8')\n",
+    "\n",
+    "    rec = cv2.inpaint(A,mask2,3,method)\n",
+    "\n",
+    "    gray = cv2.cvtColor(rec, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "    gray = gray / gray.max()\n",
+    "\n",
+    "    gray = torch.from_numpy(gray)\n",
+    "    gray = torch.unsqueeze(gray,0)\n",
+    "    gray = torch.unsqueeze(gray,0)\n",
+    "    return gray"
    ]
   },
   {
@@ -865,7 +884,8 @@
     "    # OutInpainting = interpolation(torch.squeeze(inpimg),torch.squeeze(ProperMask),method='cubic')\n",
     "    Y = torch.squeeze(inpimg)\n",
     "    M = torch.squeeze(ProperMask)\n",
-    "    X = torch.squeeze(interpolation(Y,M,method='nearest'))\n",
+    "    # X = torch.squeeze(interpolation(Y,M,method='nearest'))\n",
+    "    X = torch.squeeze(cv2_inpainting((M*Y).numpy(),M.numpy(),method=cv2.INPAINT_NS))\n",
     "    RECON = CS_CVT((M*Y).numpy(),X.numpy(),M.numpy(),MAX_ITER = 200)\n",
     "    RECON = torch.unsqueeze(torch.from_numpy(RECON),dim=0)\n",
     "    OutInpainting = torch.unsqueeze(RECON,dim=0)\n",
