Update with silent installation

--- a/PlusNN.ipynb
+++ b/PlusNN.ipynb
@@ -894,7 +894,7 @@
     "    l1loss = torch.nn.L1Loss()\n",
     "\n",
     "    # loss = mse(OutInpainting,inpimg) + 1e-5*l1loss(OutMask,torch.zeros(OutMask.shape))\n",
-    "    loss = mse(OutInpainting,inpimg) + l1loss(OutMask,torch.zeros(OutMask.shape))\n",
+    "    loss = mse(OutInpainting,inpimg) + l1loss(OutMask*ProperMask,torch.zeros(OutMask.shape))\n",
     "    loss.backward()\n",
     "    UNEToptimizer.step()\n",
     "\n",
