--- a/PlusNN.ipynb
+++ b/PlusNN.ipynb
@@ -110,10 +110,11 @@
    ],
    "source": [
     "## load BSD dataset\n",
-    "! wget http://www.eecs.berkeley.edu/Research/Projects/CS/vision/grouping/BSR/BSR_bsds500.tgz\n",
-    "! tar -xf BSR_bsds500.tgz\n",
-    "! mv BSR/BSDS500/ ./\n",
-    "! rm -rf BSR/"
+    "# not given access to BSDS dataset anymore \n",
+    "# ! wget http://www.eecs.berkeley.edu/Research/Projects/CS/vision/grouping/BSR/BSR_bsds500.tgz\n",
+    "# ! tar -xf BSR_bsds500.tgz\n",
+    "# ! mv BSR/BSDS500/ ./\n",
+    "# ! rm -rf BSR/"
    ]
   },
   {
@@ -147,8 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = BSDTrainDataset(root_dir='BSDS500/data/images/train',\n",
-    "                    transform = transformator)"
+    "# A = BSDTrainDataset(root_dir='BSDS500/data/images/train',\n",
+    "#                     transform = transformator)\n",
+    "A = A = transformator(Image.open(\"cell_repr.png\"))"
    ]
   },
   {
@@ -504,11 +506,15 @@
   {
    "cell_type": "raw",
    "id": "fa1f4762-bfea-48c9-bc55-7b9673699d6f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "source": [
     "UNETinstance = myUNET(depth=2,encoder_kernel_size = 3,decoder_kernel_size=3,imgsz = 256,tailfunc = nn.Sigmoid())\n",
     "UNEToptimizer = torch.optim.Adam([x for x in UNETinstance.parameters()], lr=1e-4)\n",
-    "inpimg = A[2]\n",
+    "inpimg = A.unsqueeze(0)\n",
     "\n",
     "pctg = 1.0\n",
     "iterNum = 0\n",
@@ -869,7 +875,7 @@
    "source": [
     "UNETinstance = myUNET(depth=2,encoder_kernel_size = 3,decoder_kernel_size=3,imgsz = 256,tailfunc = nn.ReLU())\n",
     "UNEToptimizer = torch.optim.Adam([x for x in UNETinstance.parameters()], lr=1e-4)\n",
-    "inpimg = A[0]\n",
+    "inpimg = A.unsqueeze(0)\n",
     "\n",
     "pctg = 1.0\n",
     "iterNum = 0\n",
